Quick fix to spacing

--- a/css/resume.css
+++ b/css/resume.css
@@ -47,7 +47,7 @@ header .row {
 }
 
 .job-tasks {
-	margin-top: 5px;
+	margin-top: 15px;
 	white-space: pre-line;
 }
 
@@ -88,5 +88,5 @@ section {
 }
 
 .job-techs {
-	margin-top: 5px;
+	margin-top: 15px;
 }
